--- a/tasks/users.yml
+++ b/tasks/users.yml
@@ -7,13 +7,15 @@
 
 - name: PostgreSQL | Make sure the PostgreSQL users are present
   postgresql_user:
-    name: "{{item.name}}"
+    name: "{{ item.name }}"
     password: "{{ item.pass | default(omit) }}"
     encrypted: "{{ item.encrypted | default(omit) }}"
-    port: "{{postgresql_port}}"
+    port: "{{ postgresql_port }}"
     state: present
-    login_user: "{{postgresql_admin_user}}"
+    login_user: "{{ postgresql_admin_user }}"
   become: yes
-  become_user: "{{postgresql_admin_user}}"
-  with_items: postgresql_users
-  when: postgresql_users|length > 0
+  become_user: "{{ postgresql_admin_user }}"
+  with_items: "{{ postgresql_users }}"
+  when: postgresql_users | length > 0
+  loop_control:
+    label: "{{ item.name }}"
