--- a/tasks/users.yml
+++ b/tasks/users.yml
@@ -5,17 +5,17 @@
     name: "{{ postgresql_service_name }}"
     state: started
 
-- name: PostgreSQL | Make sure the PostgreSQL users are present
-  postgresql_user:
-    name: "{{ item.name }}"
-    password: "{{ item.pass | default(omit) }}"
-    encrypted: "{{ item.encrypted | default(omit) }}"
-    port: "{{ postgresql_port }}"
-    state: present
-    login_user: "{{ postgresql_admin_user }}"
-  become: yes
-  become_user: "{{ postgresql_admin_user }}"
-  with_items: "{{ postgresql_users }}"
-  when: postgresql_users | length > 0
-  loop_control:
-    label: "{{ item.name }}"
+#- name: PostgreSQL | Make sure the PostgreSQL users are present
+#  postgresql_user:
+#    name: "{{ item.name }}"
+#    password: "{{ item.pass | default(omit) }}"
+#    encrypted: "{{ item.encrypted | default(omit) }}"
+#    port: "{{ postgresql_port }}"
+#    state: present
+#    login_user: "{{ postgresql_admin_user }}"
+#  become: yes
+#  become_user: "{{ postgresql_admin_user }}"
+#  with_items: "{{ postgresql_users }}"
+#  when: postgresql_users | length > 0
+#  loop_control:
+#    label: "{{ item.name }}"
