--- a/tasks/databases.yml
+++ b/tasks/databases.yml
@@ -5,21 +5,21 @@
     name: "{{ postgresql_service_name }}"
     state: started
 
-- name: PostgreSQL | Make sure the PostgreSQL databases are present
-  postgresql_db:
-    name: "{{item.name}}"
-    owner: "{{ item.owner | default(postgresql_database_owner) }}"
-    encoding: "{{postgresql_encoding}}"
-    lc_collate: "{{postgresql_locale}}"
-    lc_ctype: "{{postgresql_locale}}"
-    port: "{{postgresql_port}}"
-    template: "template0"
-    state: present
-    login_user: "{{postgresql_admin_user}}"
-  become: yes
-  become_user: "{{postgresql_admin_user}}"
-  with_items: postgresql_databases
-  when: postgresql_databases|length > 0
+#- name: PostgreSQL | Make sure the PostgreSQL databases are present
+#  postgresql_db:
+#    name: "{{item.name}}"
+#    owner: "{{ item.owner | default(postgresql_database_owner) }}"
+#    encoding: "{{postgresql_encoding}}"
+#    lc_collate: "{{postgresql_locale}}"
+#    lc_ctype: "{{postgresql_locale}}"
+#    port: "{{postgresql_port}}"
+#    template: "template0"
+#    state: present
+#    login_user: "{{postgresql_admin_user}}"
+#  become: yes
+#  become_user: "{{postgresql_admin_user}}"
+#  with_items: postgresql_databases
+#  when: postgresql_databases|length > 0
 
 - name: PostgreSQL | Add extensions to the databases
   shell: "psql {{item.0.db}} --username {{postgresql_admin_user}} -c 'CREATE EXTENSION IF NOT EXISTS {{ item.1 }};'"
