step: port from 1.9 to 2.0

--- a/tasks/install_yum.yml
+++ b/tasks/install_yum.yml
@@ -25,8 +25,10 @@
     state: present
   environment: "{{ postgresql_env }}"
   with_items:
-    - "postgresql{{ postgresql_version_terse }}-server"
-    - "postgresql{{ postgresql_version_terse }}"
+    - hostvars[inventory_hostname]['postgresql' + postgresql_version_terse + '-server']
+    - hostvars[inventory_hostname]['postgresql' + postgresql_version_terse]
+#    - "postgresql{{ postgresql_version_terse }}-server"
+#    - "postgresql{{ postgresql_version_terse }}"
 
 - name: PostgreSQL | PGTune
   yum:
