--- a/tasks/extensions/postgis.yml
+++ b/tasks/extensions/postgis.yml
@@ -8,7 +8,9 @@
     cache_valid_time: "{{apt_cache_valid_time | default (3600)}}"
   with_items:
     - libgeos-c1
-    - "postgresql-{{postgresql_version}}-postgis-{{postgresql_ext_postgis_version}}"
-    - "postgresql-{{postgresql_version}}-postgis-scripts"
+    - hostvars[inventory_hostname]['postgresql-' + postgresql_version + '-postgis-' + postgresql_ext_postgis_version]
+    - hostvars[inventory_hostname]['postgresql-' + postgresql_version + '-postgis-scripts']
+#    - "postgresql-{{postgresql_version}}-postgis-{{postgresql_ext_postgis_version}}"
+#    - "postgresql-{{postgresql_version}}-postgis-scripts"
   notify:
     - restart postgresql
