--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -42,9 +42,12 @@
     cache_valid_time: "{{apt_cache_valid_time | default (3600)}}"
   environment: "{{postgresql_env}}"
   with_items:
-    - "postgresql-{{postgresql_version}}"
-    - "postgresql-client-{{postgresql_version}}"
-    - "postgresql-contrib-{{postgresql_version}}"
+    - hostvars[inventory_hostname]['postgresql-' + postgresql_version]
+    - hostvars[inventory_hostname]['postgresql-client-' + postgresql_version]
+    - hostvars[inventory_hostname]['postgresql-contrib-' + postgresql_version]
+    #- "postgresql-{{postgresql_version}}"
+    #- "postgresql-client-{{postgresql_version}}"
+    #- "postgresql-contrib-{{postgresql_version}}"
 
 - name: PostgreSQL | PGTune
   apt:
