--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -664,7 +664,7 @@ postgresql_env:
 # APT settings
 postgresql_apt_key_id: ACCC4CF8
 postgresql_apt_key_url: "https://www.postgresql.org/media/keys/ACCC4CF8.asc"
-postgresql_apt_repository: 'deb http://apt-archive.postgresql.org/pub/repos/apt/ xenial-pgdg main {{postgresql_version}}'
+postgresql_apt_repository: "deb http://apt-archive.postgresql.org/pub/repos/apt/ xenial-pgdg main {{postgresql_version}}"
 # Pin-Priority of PGDG repository
 postgresql_apt_pin_priority: 500
 
