--- a/tasks/extensions/postgis.yml
+++ b/tasks/extensions/postgis.yml
@@ -2,13 +2,12 @@
 
 - name: PostgreSQL | Extensions | Make sure the postgis extensions are installed
   apt:
-    name: "{{item}}"
+    name:
+      - libgeos-c1
+      - "postgresql-{{ postgresql_version }}-postgis-{{ postgresql_ext_postgis_version }}"
+      - "postgresql-{{ postgresql_version }}-postgis-scripts"
     state: present
     update_cache: yes
-    cache_valid_time: "{{apt_cache_valid_time | default (3600)}}"
-  with_items:
-    - libgeos-c1
-    - "postgresql-{{postgresql_version}}-postgis-{{postgresql_ext_postgis_version}}"
-    - "postgresql-{{postgresql_version}}-postgis-scripts"
+    cache_valid_time: "{{ apt_cache_valid_time | default(3600) }}"
   notify:
     - restart postgresql
