--- a/tasks/install_yum.yml
+++ b/tasks/install_yum.yml
@@ -21,12 +21,11 @@
 
 - name: PostgreSQL | Install PostgreSQL
   yum:
-    name: "{{ item }}"
+    name:
+      - "postgresql{{ postgresql_version_terse }}-server"
+      - "postgresql{{ postgresql_version_terse }}"
     state: present
   environment: "{{ postgresql_env }}"
-  with_items:
-    - "postgresql{{ postgresql_version_terse }}-server"
-    - "postgresql{{ postgresql_version_terse }}"
 
 - name: PostgreSQL | PGTune
   yum:
