--- a/tasks/databases.yml
+++ b/tasks/databases.yml
@@ -21,16 +21,30 @@
   with_items: "{{postgresql_databases}}"
   when: postgresql_databases|length > 0
 
+#- name: PostgreSQL | Add extensions to the databases
+#  shell: "psql {{item.0.db}} --username {{postgresql_admin_user}} -c 'CREATE EXTENSION IF NOT EXISTS {{ item.1 }};'"
+#  become: yes
+#  become_user: "{{postgresql_service_user}}"
+#  with_subelements:
+#    - postgresql_database_extensions
+#    - extensions
+#  register: result
+#  changed_when: "'NOTICE' not in result.stderr"
+###################
+
 - name: PostgreSQL | Add extensions to the databases
-  shell: "psql {{item.0.db}} --username {{postgresql_admin_user}} -c 'CREATE EXTENSION IF NOT EXISTS {{ item.1 }};'"
+  shell: "psql {{ item.0.db }} --username {{ postgresql_admin_user }} -c 'CREATE EXTENSION IF NOT EXISTS {{ item.1 }};'"
   become: yes
-  become_user: "{{postgresql_service_user}}"
+  become_user: "{{ postgresql_service_user }}"
   with_subelements:
     - postgresql_database_extensions
     - extensions
   register: result
   changed_when: "'NOTICE' not in result.stderr"
+  when: postgresql_database_extensions | length > 0
 
+
+##########
 - name: PostgreSQL | Add hstore to the databases with the requirement
   become: yes
   become_user: "{{postgresql_service_user}}"
