fixed postgres_database_extensions reference

--- a/tasks/databases.yml
+++ b/tasks/databases.yml
@@ -37,7 +37,7 @@
   become: yes
   become_user: "{{ postgresql_service_user }}"
   with_subelements:
-    - postgresql_database_extensions|default([])
+    - "{{ postgresql_database_extensions }}"
     - extensions
   register: result
   changed_when: "'NOTICE' not in result.stderr"
