removed postgis installation

--- a/tasks/extensions/postgis.yml
+++ b/tasks/extensions/postgis.yml
@@ -1,14 +1,15 @@
+---
 # file: postgresql/tasks/extensions/postgis.yml
 
-- name: PostgreSQL | Extensions | Make sure the postgis extensions are installed
-  apt:
-    name:
-      #- libgeos-c1v5
-      - "postgresql-{{ postgresql_version }}-postgis-{{ postgresql_ext_postgis_version }}"
-      # - "postgresql-{{ postgresql_version }}-postgis-scripts"
-      - "postgresql-{{ postgresql_version }}-postgis-{{ postgresql_ext_postgis_version }}-scripts"
-    state: present
-    update_cache: yes
-    cache_valid_time: "{{ apt_cache_valid_time | default(3600) }}"
-  notify:
-    - restart postgresql
+#- name: PostgreSQL | Extensions | Make sure the postgis extensions are installed
+#  apt:
+#    name:
+#      #- libgeos-c1v5
+#      - "postgresql-{{ postgresql_version }}-postgis-{{ postgresql_ext_postgis_version }}"
+#      # - "postgresql-{{ postgresql_version }}-postgis-scripts"
+#      - "postgresql-{{ postgresql_version }}-postgis-{{ postgresql_ext_postgis_version }}-scripts"
+#    state: present
+#    update_cache: yes
+#    cache_valid_time: "{{ apt_cache_valid_time | default(3600) }}"
+#  notify:
+#    - restart postgresql
