--- a/tasks/databases.yml
+++ b/tasks/databases.yml
@@ -65,12 +65,12 @@
   changed_when: uuid_ext_result.rc == 0 and ("already exists, skipping" not in uuid_ext_result.stderr)
   when: item.uuid_ossp is defined and item.uuid_ossp
 
-- name: PostgreSQL | Add postgis to the databases with the requirement
-  become: yes
-  become_user: "{{postgresql_service_user}}"
-  shell: "{{ postgresql_bin_directory}}/psql {{item.name}} --username {{postgresql_admin_user}} -c 'CREATE EXTENSION IF NOT EXISTS postgis;'&&psql {{item.name}} -c 'CREATE EXTENSION IF NOT EXISTS postgis_topology;'"
-  with_items: "{{ postgresql_databases }}"
-  when: item.gis is defined and item.gis
+#- name: PostgreSQL | Add postgis to the databases with the requirement
+#  become: yes
+#  become_user: "{{postgresql_service_user}}"
+#  shell: "{{ postgresql_bin_directory}}/psql {{item.name}} --username {{postgresql_admin_user}} -c 'CREATE EXTENSION IF NOT EXISTS postgis;'&&psql {{item.name}} -c 'CREATE EXTENSION IF NOT EXISTS postgis_topology;'"
+#  with_items: "{{ postgresql_databases }}"
+#  when: item.gis is defined and item.gis
 
 - name: PostgreSQL | add cube to the database with the requirement
   become: yes
