removed adding the postgres apt repo to use ubuntu's default repo

--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -7,24 +7,24 @@
     pkg: ca-certificates
     state: present
 
-- name: PostgreSQL | Add PostgreSQL repository apt-key
-  apt_key:
-    id: "{{ postgresql_apt_key_id }}"
-    url: "{{ postgresql_apt_key_url }}"
-    state: present
-  when: postgresql_apt_key_url and postgresql_apt_key_id
+#- name: PostgreSQL | Add PostgreSQL repository apt-key
+#  apt_key:
+#    id: "{{ postgresql_apt_key_id }}"
+#    url: "{{ postgresql_apt_key_url }}"
+#    state: present
+#  when: postgresql_apt_key_url and postgresql_apt_key_id
 
-- name: PostgreSQL | Add PostgreSQL repository
-  apt_repository:
-    repo: "{{ postgresql_apt_repository }}"
-    state: present
-  when: postgresql_apt_repository is defined and postgresql_apt_repository != ''
+#- name: PostgreSQL | Add PostgreSQL repository
+#  apt_repository:
+#    repo: "{{ postgresql_apt_repository }}"
+#    state: present
+#  when: postgresql_apt_repository is defined and postgresql_apt_repository != ''
 
-- name: PostgreSQL | Add PostgreSQL repository preferences
-  template:
-    src: etc_apt_preferences.d_apt_postgresql_org_pub_repos_apt.pref.j2
-    dest: /etc/apt/preferences.d/apt_postgresql_org_pub_repos_apt.pref
-  when: postgresql_apt_pin_priority
+#- name: PostgreSQL | Add PostgreSQL repository preferences
+#  template:
+#    src: etc_apt_preferences.d_apt_postgresql_org_pub_repos_apt.pref.j2
+#    dest: /etc/apt/preferences.d/apt_postgresql_org_pub_repos_apt.pref
+#  when: postgresql_apt_pin_priority
 
 - name: PostgreSQL | Make sure the dependencies are installed
   apt:
