--- a/tasks/extensions/postgis.yml
+++ b/tasks/extensions/postgis.yml
@@ -4,8 +4,8 @@
     name:
       #- libgeos-c1v5
       - "postgresql-{{ postgresql_version }}-postgis-{{ postgresql_ext_postgis_version }}"
-      # - "postgresql-{{ postgresql_version }}-postgis-scripts"
-      - "postgresql-{{ postgresql_version }}-postgis-{{ postgresql_ext_postgis_version }}-scripts"
+      - "postgresql-{{ postgresql_version }}-postgis-scripts"
+      # - "postgresql-{{ postgresql_version }}-postgis-{{ postgresql_ext_postgis_version }}-scripts"
     state: present
     update_cache: yes
     cache_valid_time: "{{ apt_cache_valid_time | default(3600) }}"
